# music-reco-rust-cli-with-spotify-api

./: Cargo.toml  Makefile  README.md  release.sh
music/: Cargo.toml
music/src/: main.rs
spotify/: Cargo.toml
