[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
base64 = "0.21.0"
json= "*"
clap = {version="4.0.32", features=["derive"]}
